objects/Vehicle__c.object
<CustomObject>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Tub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Mid-Range</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diesel-Powered Class B</fullName>
                </value>
                <value>
                    <fullName>Front-Engine Diesel</fullName>
                </value>
                <value>
                    <fullName>Regular Diesel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Awning__c</fullName>
        <label>Awning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Levelers__c</fullName>
        <label>Levelers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN_Number__c</fullName>
        <label>VIN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propane_Tank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Propane Tank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <label>License Plate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Conditioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Conditioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bathroom_Hookup__c</fullName>
        <label>Bathroom Hookup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Walk-In Shower</fullName>
                </value>
                <value>
                    <fullName>Tub/Shower Combo</fullName>
                </value>
                <value>
                    <fullName>No Shower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fancy_Sound_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fancy Sound System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backup_Camera_Monitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup Camera/Monitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Passengers__c</fullName>
        <label>Recommended Passengers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>